# aperion-llm-router

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  test_real_llm.py
ref/: ASYNC_PATTERNS.md  BEST_PRACTICES.md  GAP_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  KNOWN_ISSUES.md  SOURCES.md
src/aperion_switchboard/: __init__.py  main.py
src/aperion_switchboard/core/: __init__.py  cache.py  fail_closed.py  protocol.py  rate_limit.py  resilience.py  router.py
src/aperion_switchboard/providers/: __init__.py  anthropic.py  base.py  echo.py  gemini.py  openai.py  workers.py
src/aperion_switchboard/service/: __init__.py  app.py  metrics.py  middleware.py  schemas.py
tests/: __init__.py  conftest.py
tests/integration/: test_providers.py  test_streaming.py
tests/safety/: test_fail_closed.py
tests/unit/: test_anthropic.py  test_cache.py  test_middleware.py  test_rate_limit.py  test_resilience.py  test_routing.py  test_validation.py
