[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aperion-switchboard"
version = "1.2.1"
description = "The Switchboard - Unified LLM API Gateway with fail-closed semantics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Aperion Team" }
]
keywords = ["llm", "api-gateway", "openai", "gemini", "workers-ai", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/invictustitan2/aperion-llm-router"
Documentation = "https://github.com/invictustitan2/aperion-llm-router#readme"
Repository = "https://github.com/invictustitan2/aperion-llm-router"
"Bug Tracker" = "https://github.com/invictustitan2/aperion-llm-router/issues"

[project.scripts]
switchboard = "aperion_switchboard.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aperion_switchboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (may require API keys)",
    "safety: Safety-critical tests (fail-closed, echo blocking)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
